# slm

./: .gitignore  AUDIT.md  MODEL_CARD.md  Makefile  PROGRESS.md  README.md  dvc.yaml  pyproject.toml  slm-research.md  v1-olive-mono.html
.github/workflows/: cli-publish.yml  cli-test.yml
configs/: licenses.csv  sources.toml
deploy/: README.md  entrypoint.sh  fix-entrypoint.txt  inference.sdl.yml  requirements-training.txt  setup-commands.txt  setup_env.sh  start_sft.sh  train-fresh.sdl.yml  train-h100.sdl.yml  train.sdl.yml
deploy/gcp/: Caddyfile  docker-compose.yml  setup.sh
deploy/rag-api/: Dockerfile  anchor_patterns.md  app.py  requirements.txt
prompts/: sealevel.json
reports/: agent_v5_report_final.json  solana_v5_eval.json
results/api-eval/: eval_api_20260418_230210.json  eval_api_20260419_120344.json  eval_api_20260419_122522.json  eval_api_20260419_125526.json  eval_api_20260419_192716.json  eval_api_20260421_181716.json  eval_api_20260421_182606.json  eval_extended_with_cleanup.json  eval_with_cleanup.json
results/compile-eval/: compile_eval_20260419_131250.json  compile_eval_20260419_132202.json  compile_eval_20260419_180339.json  compile_eval_20260419_192933.json  compile_full_20260419_195222.json  compile_retry_20260419_175148.json
results/dpo/: eval_checkpoint_20260404_210224.json
results/phase1/: eval_results.json
results/phase2/: eval_checkpoint_20260404_121122.json
scripts/: _tool_calling_common.py  add_new_datasets.py  check_data_structure.py  collect.py  collect_onchain.py  collect_pinocchio.py  collect_solana_code.py  collect_stackexchange.py  crawl_docs.py  crawl_forum.py  curate_subset.py  dedup.py  discover_solana_repos.py  export_interactions.py  filter.py  filter_compilable.py  filter_perplexity.py  fix_licenses.py  fix_structure.py  fix_training_data.py  gen_adversarial_sft.py  gen_expert_qa.py  gen_migration_examples.py  gen_sft_from_code.py  gen_synthetic.py  gen_synthetic_bulk1.py  gen_synthetic_bulk10.py  gen_synthetic_bulk11.py  gen_synthetic_bulk12.py  gen_synthetic_bulk2.py  gen_synthetic_bulk3.py  gen_synthetic_bulk4.py  gen_synthetic_bulk5.py  gen_synthetic_bulk6.py  gen_synthetic_bulk7.py  gen_synthetic_bulk8.py  gen_synthetic_bulk9.py  gen_synthetic_extra.py  gen_synthetic_extra2.py  gen_tool_calling_discipline.py  (+20 more)
scripts/v2_test/: agent_test_tasks.json  eval_v2.py  gen_v3_dataset.py  gen_v4_dataset.py  gen_v5_dataset.py  test_v2_agent.py  tool_parser_v2.py
slm-cli/: .coverage  README.md  pyproject.toml
slm-cli/sealevel_cli/: __init__.py  agent.py  client.py  commands.py  config.py  display.py  input.py  main.py  permissions.py  session.py  storage.py  tool_parser.py  tools.py
slm-cli/slm_cli/: __init__.py  client.py  config.py  display.py  main.py
slm-cli/tests/: test_agent.py  test_client.py  test_commands.py  test_config.py  test_display.py  test_input.py  test_main.py  test_permissions.py  test_session.py  test_storage.py  test_tool_parser.py  test_tools.py
slm-mcp/: Dockerfile  README.md  package-lock.json  package.json
slm-mcp/codex-plugin/: .mcp.json
slm-mcp/src/: index.ts
slm-mcp/test/: index.test.ts
slm-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json  vitest.config.ts
slm-vscode/src/: autocomplete.ts  chat-participant.ts  diagnostics.ts  extension.ts  settings.ts  status-bar.ts
slm-vscode/test/: chat-participant.test.ts  settings.test.ts
slm-web/: components.json  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
slm-web/__tests__/: feat-18-error-table-expansion.test.ts  feat-19-github-oauth.test.ts  feat-20-rate-limiting.test.ts  feat-21-usage-stats.test.ts  feat-22-device-auth.test.ts  fix-01-dark-mode-default.test.tsx  fix-02-landing-cta.test.tsx  fix-03-og-meta-tags.test.ts  fix-04-tx-block-time.test.tsx  fix-05-health-down-status.test.ts  fix-06-upstream-timeout-error.test.tsx  fix-07-footer-attribution.test.tsx  fix-08-tx-signature-regex.test.ts  fix-09-eval-score-color.test.tsx  fix-10-vscode-tab.test.tsx  fix-11-markdown-rendering.test.tsx  fix-12-feedback-buttons.test.tsx  fix-13-tx-instructions-accordion.test.tsx  fix-14-use-api-key.test.ts  fix-15-typing-indicator.test.tsx  fix-16-logo-og-image.test.tsx  (+1 more)
training/: eval.py  eval_api.py  eval_compile.py  eval_compile_full.py  eval_compile_retry.py  eval_tasks.json  eval_tasks_extended.json  merge_and_push.py  post_training.sh  prepare_dpo.py  score_task.py  train_cpt.py  train_dpo.py  train_sft.py  train_sft_v2.py
(+124 files in other folders)
