[project]
name = "slm-data-pipeline"
version = "0.1.0"
description = "Data pipeline for Solana Language Model training"
requires-python = ">=3.11"
dependencies = [
    "datasketch>=1.6.0",
    "datasets>=3.0.0",
    "dvc>=3.50.0",
    "huggingface-hub>=0.25.0",
    "trafilatura>=2.0.0",
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "xxhash>=3.5.0",
]

[project.optional-dependencies]
quality = [
    "kenlm",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
