[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-cli"
version = "0.1.0"
description = "CLI for SLM - Solana Language Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
slm = "slm_cli.main:app"

[tool.setuptools.packages.find]
include = ["slm_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
